--- a/pj2/pubspec.yaml
+++ b/pj2/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.15.10
   intl: ^0.17.0
+  image_picker: ^1.1.0
+  firebase_storage: ^11.7.4
 
 dev_dependencies:
   flutter_test:
